// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bmi есть корректный снимок без props 1`] = `
<h3>
  ИМТ - 
  0.00
</h3>
`;

exports[`Bmi есть корректный снимок с корректными переменными 1`] = `
<h3>
  ИМТ - 
  26.12
</h3>
`;
